# OPN_finder

./: CMakeLists.txt  README.md  enum_primes.cpp  enum_primes.hpp  expalg.cpp  expalg.hpp  list.cpp  list.hpp  main.cpp  opnalg.cpp  opnalg.hpp  tools.cpp  tools.hpp  tree.cpp  tree.hpp
